Fix subset name

--- a/DatasetGeneration.ipynb
+++ b/DatasetGeneration.ipynb
@@ -376,7 +376,7 @@
    "metadata": {},
    "source": [
     "First, we download the _generate\\_tfrecord.py_ script from the Tensorflow Object Detection API page.  \n",
-    "The script will index the Train and Test partitions of the dataset, such that the training script can find the files.  "
+    "The script will index the Train and Validation partitions of the dataset, such that the training script can find the files.  "
    ]
   },
   {
@@ -413,9 +413,8 @@
    "id": "9e72e38e",
    "metadata": {},
    "source": [
-    "We then must split our dataset into a training and a test partition. Be sure to evenly distribute samples for each class among the two sets, or else the training may yield underfitting or overfitting problems.  \n",
-    "We will use 25% of the dataset for the test partition and the remaining 75% for the testing partition. Since we have 100 samples for each class, it amounts to 25 test samples for each class.  \n",
-    "We won't use a validation partition, since the original model's structure from which we are performing transfer learning doesn't support it.   "
+    "We then must split our dataset into a training and a validation partition. Be sure to evenly distribute samples for each class among the two sets, or else the training may yield underfitting or overfitting problems.  \n",
+    "We will use 25% of the dataset for the validation partition and the remaining 75% for the training partition. Since we have 100 samples for each class, it amounts to 25 validation samples for each class.   "
    ]
   },
   {
@@ -434,8 +433,8 @@
     }
    ],
    "source": [
-    "number_test_samples = 25\n",
-    "!mkdir \"{IMAGE_PATH + '/test'}\"\n",
+    "number_validation_samples = 25\n",
+    "!mkdir \"{IMAGE_PATH + '/validation'}\"\n",
     "!mkdir \"{IMAGE_PATH + '/train'}\"\n",
     "for label in labels:\n",
     "    file_names = [file for file in os.listdir(imagePath)\n",
@@ -445,11 +444,11 @@
     "    for file_name in file_names:\n",
     "        pre, ext = os.path.splitext(file_name)\n",
     "        annotation_name = pre + \".xml\"\n",
-    "        if(index < number_test_samples):\n",
+    "        if(index < number_validation_samples):\n",
     "            # Remove comment for verbose output\n",
-    "            #print(f\"Moving {file_name} and {annotation_name} from {imagePath} to {IMAGE_PATH + '/test'}\")\n",
-    "            shutil.copy(src=imagePath + \"/\" + file_name, dst=IMAGE_PATH + '/test')\n",
-    "            shutil.copy(src=imagePath + \"/\" + annotation_name, dst=IMAGE_PATH + '/test')\n",
+    "            #print(f\"Moving {file_name} and {annotation_name} from {imagePath} to {IMAGE_PATH + '/validation'}\")\n",
+    "            shutil.copy(src=imagePath + \"/\" + file_name, dst=IMAGE_PATH + '/validation')\n",
+    "            shutil.copy(src=imagePath + \"/\" + annotation_name, dst=IMAGE_PATH + '/validation')\n",
     "        else:\n",
     "            # Remove comment for verbose output\n",
     "            #print(f\"Moving {file_name} and {annotation_name} from {imagePath} to {IMAGE_PATH + '/train'}\")\n",
@@ -475,7 +474,7 @@
    ],
    "source": [
     "!python {SCRIPTS_PATH + '/generate_tfrecord.py'} -x {IMAGE_PATH + '/train'} -l {ANNOTATION_PATH + '/label_map.pbtxt'} -o {ANNOTATION_PATH + '/train.record'}\n",
-    "!python {SCRIPTS_PATH + '/generate_tfrecord.py'} -x {IMAGE_PATH + '/test'} -l {ANNOTATION_PATH + '/label_map.pbtxt'} -o {ANNOTATION_PATH + '/test.record'}"
+    "!python {SCRIPTS_PATH + '/generate_tfrecord.py'} -x {IMAGE_PATH + '/validation'} -l {ANNOTATION_PATH + '/label_map.pbtxt'} -o {ANNOTATION_PATH + '/validation.record'}"
    ]
   },
   {
@@ -638,7 +637,7 @@
     "pipeline_config.train_input_reader.label_map_path= ANNOTATION_PATH + '/label_map.pbtxt'\n",
     "pipeline_config.train_input_reader.tf_record_input_reader.input_path[:] = [ANNOTATION_PATH + '/train.record']\n",
     "pipeline_config.eval_input_reader[0].label_map_path = ANNOTATION_PATH + '/label_map.pbtxt'\n",
-    "pipeline_config.eval_input_reader[0].tf_record_input_reader.input_path[:] = [ANNOTATION_PATH + '/test.record']\n",
+    "pipeline_config.eval_input_reader[0].tf_record_input_reader.input_path[:] = [ANNOTATION_PATH + '/validation.record']\n",
     "pipeline_config.train_config.data_augmentation_options.remove(pipeline_config.train_config.data_augmentation_options[0])"
    ]
   },
