Updated DatasetGeneration.ipynb, now supports metrics computation section

--- a/DatasetGeneration.ipynb
+++ b/DatasetGeneration.ipynb
@@ -849,9 +849,257 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "56105aac",
+   "metadata": {},
+   "source": [
+    "## Model Performance Evaluation  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "109dc119",
+   "metadata": {},
+   "source": [
+    "We need to run the model and produce an annotation file for each sample in the validation set containing the coordinates of the bounding box of each class.  \n",
+    "These will be then used to compute all the metrics to evaluate the model's performance.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "be30e0a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import all the required libraries\n",
+    "import os\n",
+    "import tensorflow as tf\n",
+    "from object_detection.utils import config_util\n",
+    "from object_detection.protos import pipeline_pb2\n",
+    "from google.protobuf import text_format\n",
+    "from object_detection.utils import label_map_util\n",
+    "from object_detection.utils import visualization_utils as viz_utils\n",
+    "from object_detection.builders import model_builder\n",
+    "import numpy as np\n",
+    "import ast\n",
+    "import cv2 \n",
+    "\n",
+    "# Utility definitions\n",
+    "WORKSPACE_PATH = 'Tensorflow/Workspace'\n",
+    "ANNOTATION_PATH = WORKSPACE_PATH+'/annotations'\n",
+    "MODEL_PATH = WORKSPACE_PATH+'/trained-models'\n",
+    "PRETRAINED_MODEL_PATH = WORKSPACE_PATH+'/pre-trained-model'\n",
+    "CONFIG_PATH = MODEL_PATH+'/custom_trained_model/pipeline.config'\n",
+    "CHECKPOINT_PATH = MODEL_PATH+'/custom_trained_model/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "3eee72ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "checkpoint_name = 'ckpt-39'\n",
+    "\n",
+    "# Load the pipeline.config file and build a detection model\n",
+    "configs = config_util.get_configs_from_pipeline_file(CONFIG_PATH)\n",
+    "detection_model = model_builder.build(model_config=configs['model'], is_training=False)\n",
+    "\n",
+    "# Restore the specified checkpoint (it must match an existing model)\n",
+    "ckpt = tf.compat.v2.train.Checkpoint(model=detection_model)\n",
+    "ckpt.restore(os.path.join(CHECKPOINT_PATH, checkpoint_name)).expect_partial()\n",
+    "\n",
+    "# Computes the detections from the predictive model\n",
+    "@tf.function\n",
+    "def detect_fn(image):\n",
+    "    image, shapes = detection_model.preprocess(image)\n",
+    "    prediction_dict = detection_model.predict(image, shapes)\n",
+    "    detections = detection_model.postprocess(prediction_dict, shapes)\n",
+    "    return detections\n",
+    "\n",
+    "# Load labels from the label map\n",
+    "category_index = label_map_util.create_category_index_from_labelmap(ANNOTATION_PATH+'/label_map.pbtxt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a3236126",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Configuration file found\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check if a configuration file exists, else load a predefined value set\n",
+    "if os.path.isfile('Config\\config.dat'):\n",
+    "    print(\"Configuration file found\")\n",
+    "    file = open(\"Config\\config.dat\", \"r\")\n",
+    "    contents = file.read()\n",
+    "    config = ast.literal_eval(contents)\n",
+    "    file.close()\n",
+    "else:\n",
+    "    print (\"Configuration file not found. Run CreateHSVProfile.py to create a local profile\")\n",
+    "    config = {'HL': 0, 'SL': 29, 'VL': 24, 'HH': 40, 'SH': 255, 'VH': 255}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88ad124b",
+   "metadata": {},
+   "source": [
+    "The following code box will run the detection model on all the samples in the validation split and save the information about the 5 highest confidence bounding boxes detected. The truncation is done since, due to its architecture, the model will always return 100 detections, but most of them contain no information.  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee7d09c1",
+   "id": "c9279ae3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "validationPath = WORKSPACE_PATH + \"/images/validation\"\n",
+    "detectionsPath = ANNOTATION_PATH + \"/detections/\"\n",
+    "!mkdir \"{detectionsPath}\"\n",
+    "samples_names = [file for file in os.listdir(validationPath)\n",
+    "                  if file.endswith(\"jpg\")]\n",
+    "\n",
+    "for sample_name in samples_names:\n",
+    "    pre, ext = os.path.splitext(sample_name)\n",
+    "    annotation_name = pre + \".txt\"\n",
+    "    # Remove comment for verbose output\n",
+    "    sample = cv2.imread(validationPath + \"/\" + sample_name)\n",
+    "    image_np = np.array(sample)\n",
+    "\n",
+    "    HSV_Frame = cv2.cvtColor(sample, cv2.COLOR_BGR2HSV)\n",
+    "    totalMask = cv2.inRange(HSV_Frame, (config[\"HL\"], config[\"SL\"], config[\"VL\"]), (config[\"HH\"], config[\"SH\"], config[\"VH\"]))\n",
+    "    totalMask = totalMask.astype(np.uint8)\n",
+    "\n",
+    "    # The mask finally undergoes the Opening operator in order to remove pepper noise,\n",
+    "    # then gets applied as a bitwise operator to the frame\n",
+    "    totalMask = cv2.morphologyEx(totalMask, cv2.MORPH_OPEN, cv2.getStructuringElement(cv2.MORPH_ELLIPSE,(7, 7)))\n",
+    "    output = cv2.bitwise_and(sample, sample, mask = totalMask)\n",
+    "\n",
+    "    # The masked image is then converted to a tensor for object detection\n",
+    "    # The detections dictionary is formatted according to the objectdetectionAPI\n",
+    "    input_tensor = tf.convert_to_tensor(np.expand_dims(output, 0), dtype=tf.float32)\n",
+    "    detections = detect_fn(input_tensor)\n",
+    "    num_detections = int(detections.pop('num_detections'))\n",
+    "    detections = {key: value[0, :num_detections].numpy()\n",
+    "                for key, value in detections.items()}\n",
+    "    detections['num_qdetections'] = num_detections\n",
+    "    detections['detection_classes'] = detections['detection_classes'].astype(np.int64)\n",
+    "\n",
+    "    # Save top 5 detections. There is no use in keeping all 100.\n",
+    "    file = open(detectionsPath + annotation_name, \"w\")\n",
+    "    for line in range(5):\n",
+    "        detected_class = detections['detection_classes'][line]\n",
+    "        confidence = detections['detection_scores'][line]\n",
+    "        ymin, xmin, ymax, xmax = detections['detection_boxes'][line]\n",
+    "        # Coordinate types are converted for compatibility with the tool used for metric computation\n",
+    "        width = xmax - xmin\n",
+    "        height = ymax - ymin\n",
+    "        xcenter = xmin + 0.5 * width\n",
+    "        ycenter = ymin + 0.5 * height\n",
+    "        file.write(f\"{detected_class} {confidence} {xcenter} {ycenter} {width} {height}\\n\")\n",
+    "    file.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a34f177",
+   "metadata": {},
+   "source": [
+    "Produce a file containing the class names.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "c1ecf9e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = ['LeftL', 'LeftA', 'LeftO', 'LeftV', 'LeftOpenHand', 'RIndexUp', 'RIndexDown', 'RIndexLeft', 'RIndexRight', 'RIndexFront', 'RThumbBack', 'RClearC']\n",
+    "file = open(ANNOTATION_PATH + \"/labelNames.txt\", \"w\")\n",
+    "for label in labels:\n",
+    "    file.write(f\"{label}\\n\")\n",
+    "file.truncate(file.tell() - len(os.linesep))\n",
+    "file.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00128344",
+   "metadata": {},
+   "source": [
+    "If not done before, we need to install the Object Detection Metrics submodule by running the follwoing code box.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c8c08fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cd review_object_detection_metrics\n",
+    "!python setup.py install --prefix .\n",
+    "%cd .."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8442fe5",
+   "metadata": {},
+   "source": [
+    "Now we run the Object Detection Metrics submodule.  \n",
+    "For additional information, follow the guide available at the [submodule's GitHub page](https://github.com/rafaelpadilla/review_object_detection_metrics).  \n",
+    "For the purpose of this project, we will use these values:  \n",
+    "- Ground truth -> Annotations: the directory containing the validation split, \"project_root/Tensorflow/Workspace/images/validation\"  \n",
+    "- Ground truth -> Images: the directory containing the validation split's .xml files, \"project_root/Tensorflow/Workspace/images/validation\"  \n",
+    "- Ground truth -> Classes: can be left empty  \n",
+    "- Coordinates format: PASCAL VOC (.xml)  \n",
+    "- Detections -> Annotations: the directory containing the detection.txt files generated at the previous step, \"project_root/Tensorflow/Workspace/annotations/detection\"  \n",
+    "- Detections -> Classes: the labelNames.txt file under \"project_root/Tensorflow/Workspace/annotations\"  \n",
+    "- Coordinates format: \"<class_id> \\<confidence> \\<xcenter> \\<ycenter> \\<width> \\<height> (RELATIVE)\"  \n",
+    "- Output: Any folder, we used \"project_root/Tensorflow/Workspace/metrics-output\"  \n",
+    "\n",
+    "Be sure to save the computed metrics to a file.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "f98b437f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "e:\\PoliTO\\Machine Learning for Vision and Multimedia\\review_object_detection_metrics\n",
+      "e:\\PoliTO\\Machine Learning for Vision and Multimedia\n"
+     ]
+    }
+   ],
+   "source": [
+    "%cd review_object_detection_metrics\n",
+    "!python run.py --help\n",
+    "%cd .."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b491b9e",
    "metadata": {},
    "outputs": [],
    "source": []
