--- a/DatasetGeneration.ipynb
+++ b/DatasetGeneration.ipynb
@@ -1092,7 +1092,7 @@
    ],
    "source": [
     "%cd review_object_detection_metrics\n",
-    "!python run.py --help\n",
+    "!python run.py\n",
     "%cd .."
    ]
   },
