--- a/Technical Paper/egbib.bib
+++ b/Technical Paper/egbib.bib
@@ -89,3 +89,16 @@
   url = {https://github.com/tzutalin/labelImg},
   year = 2015
 }
+
+@Article{electronics10030279,
+AUTHOR = {Padilla, Rafael and Passos, Wesley L. and Dias, Thadeu L. B. and Netto, Sergio L. and da Silva, Eduardo A. B.},
+TITLE = {A Comparative Analysis of Object Detection Metrics with a Companion Open-Source Toolkit},
+JOURNAL = {Electronics},
+VOLUME = {10},
+YEAR = {2021},
+NUMBER = {3},
+ARTICLE-NUMBER = {279},
+URL = {https://www.mdpi.com/2079-9292/10/3/279},
+ISSN = {2079-9292},
+DOI = {10.3390/electronics10030279}
+}
